[ExercismFSharp] Add ProteinTranslation solution

--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -84,6 +84,7 @@
     <Compile Include="Pangram.fs" />
     <Compile Include="PerfectNumbers.fs" />
     <Compile Include="PhoneNumber.fs" />
+    <Compile Include="ProteinTranslation.fs" />
     <Compile Include="Proverb.fs" />
     <Compile Include="PythagoreanTriplet.fs" />
     <Compile Include="QueenAttack.fs" />
