--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -105,6 +105,7 @@
     <Compile Include="TriangleTest.fs" />
     <Compile Include="TwelveDaysSongTest.fs" />
     <Compile Include="WordCountTest.fs" />
+    <Compile Include="ProteinTranslationTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
