--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -73,6 +73,7 @@
     <Compile Include="HelloWorld.fs" />
     <Compile Include="House.fs" />
     <Compile Include="Isogram.fs" />
+    <Compile Include="KinderGartenGarden.fs" />
     <Compile Include="LeapYear.fs" />
     <Compile Include="Ledger.fs" />
     <Compile Include="Luhn.fs" />
