--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -77,6 +77,7 @@
     <Compile Include="KinderGartenGardenTest.fs" />
     <Compile Include="LeapYearTest.fs" />
     <Compile Include="LedgerTest.fs" />
+    <Compile Include="ListOpsTest.fs" />
     <Compile Include="LuhnTest.fs" />
     <Compile Include="MatrixTest.fs" />
     <Compile Include="MinesweeperTest.fs" />
