--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -76,6 +76,7 @@
     <Compile Include="KinderGartenGarden.fs" />
     <Compile Include="LeapYear.fs" />
     <Compile Include="Ledger.fs" />
+    <Compile Include="ListOps.fs" />
     <Compile Include="Luhn.fs" />
     <Compile Include="Matrix.fs" />
     <Compile Include="Minesweeper.fs" />
