--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -86,6 +86,7 @@
     <Compile Include="Pangram.fs" />
     <Compile Include="PerfectNumbers.fs" />
     <Compile Include="PhoneNumber.fs" />
+    <Compile Include="PrimeFactors.fs" />
     <Compile Include="ProteinTranslation.fs" />
     <Compile Include="Proverb.fs" />
     <Compile Include="PythagoreanTriplet.fs" />
