--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -95,6 +95,7 @@
     <Compile Include="Raindrops.fs" />
     <Compile Include="RnaTranscription.fs" />
     <Compile Include="RobotName.fs" />
+    <Compile Include="RobotSimulator.fs" />
     <Compile Include="RomanNumeral.fs" />
     <Compile Include="SaddlePoints.fs" />
     <Compile Include="Say.fs" />
