[ExercismFSharp] Add BinarySearch solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -60,6 +60,7 @@
     <Compile Include="AtbashTest.fs" />
     <Compile Include="BankAccountTest.fs" />
     <Compile Include="BeerSongTest.fs" />
+    <Compile Include="BinarySearchTest.fs" />
     <Compile Include="BobTest.fs" />
     <Compile Include="ClockTests.fs" />
     <Compile Include="CryptoSquareTest.fs" />
