--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="Atbash.fs" />
     <Compile Include="BankAccount.fs" />
     <Compile Include="BeerSong.fs" />
+    <Compile Include="BinarySearch.fs" />
     <Compile Include="Bob.fs" />
     <Compile Include="Clock.fs" />
     <Compile Include="CryptoSquare.fs" />
