--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -56,6 +56,7 @@
     <Compile Include="AccumulateTest.fs" />
     <Compile Include="AcronymTest.fs" />
     <Compile Include="AllergiesTest.fs" />
+    <Compile Include="AllYourBaseTest.fs" />
     <Compile Include="AnagramTest.fs" />
     <Compile Include="AtbashTest.fs" />
     <Compile Include="BankAccountTest.fs" />
