[ExercismFSharp] Add LargestSeriesProduct solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -77,6 +77,7 @@
     <Compile Include="HouseTest.fs" />
     <Compile Include="IsogramTest.fs" />
     <Compile Include="KinderGartenGardenTest.fs" />
+    <Compile Include="LargestSeriesProductTest.fs" />
     <Compile Include="LeapYearTest.fs" />
     <Compile Include="LedgerTest.fs" />
     <Compile Include="ListOpsTest.fs" />
