--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -61,6 +61,7 @@
     <Compile Include="BankAccount.fs" />
     <Compile Include="BeerSong.fs" />
     <Compile Include="BinarySearch.fs" />
+    <Compile Include="BinarySearchTree.fs" />
     <Compile Include="Bob.fs" />
     <Compile Include="Clock.fs" />
     <Compile Include="CryptoSquare.fs" />
