--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -116,6 +116,7 @@
     <Compile Include="SpaceAge.fs" />
     <Compile Include="Strain.fs" />
     <Compile Include="SumOfMultiples.fs" />
+    <Compile Include="Tournament.fs" />
     <Compile Include="Triangle.fs" />
     <Compile Include="TwelveDaysSong.fs" />
     <Compile Include="WordCount.fs" />
