[ExercismFSharp] Add TreeBuilding solution

--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -119,6 +119,7 @@
     <Compile Include="StrainTest.fs" />
     <Compile Include="SumOfMultiplesTest.fs" />
     <Compile Include="TournamentTest.fs" />
+    <Compile Include="TreeBuildingTest.fs" />
     <Compile Include="TriangleTest.fs" />
     <Compile Include="TwelveDaysSongTest.fs" />
     <Compile Include="WordCountTest.fs" />
