--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -66,6 +66,7 @@
     <Compile Include="CircularBuffer.fs" />
     <Compile Include="Clock.fs" />
     <Compile Include="CryptoSquare.fs" />
+    <Compile Include="CustomSet.fs" />
     <Compile Include="DifferenceOfSquares.fs" />
     <Compile Include="DiffieHellman.fs" />
     <Compile Include="DotDsl.fs" />
