--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -98,6 +98,7 @@
     <Compile Include="PascalsTriangle.fs" />
     <Compile Include="PerfectNumbers.fs" />
     <Compile Include="PhoneNumber.fs" />
+    <Compile Include="PigLatin.fs" />
     <Compile Include="PrimeFactors.fs" />
     <Compile Include="ProteinTranslation.fs" />
     <Compile Include="Proverb.fs" />
