--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -126,6 +126,7 @@
     <Compile Include="Triangle.fs" />
     <Compile Include="TwelveDaysSong.fs" />
     <Compile Include="WordCount.fs" />
+    <Compile Include="WordProblem.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
