--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -87,6 +87,7 @@
     <Compile Include="LargestSeriesProductTest.fs" />
     <Compile Include="LeapYearTest.fs" />
     <Compile Include="LedgerTest.fs" />
+    <Compile Include="LinkedListTest.fs" />
     <Compile Include="ListOpsTest.fs" />
     <Compile Include="LuhnTest.fs" />
     <Compile Include="MarkdownTest.fs" />
