--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -129,6 +129,7 @@
     <Compile Include="TreeBuilding.fs" />
     <Compile Include="Triangle.fs" />
     <Compile Include="TwelveDaysSong.fs" />
+    <Compile Include="TwoBucket.fs" />
     <Compile Include="WordCount.fs" />
     <Compile Include="WordProblem.fs" />
   </ItemGroup>
