--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -74,6 +74,7 @@
     <Compile Include="DotDsl.fs" />
     <Compile Include="ETL.fs" />
     <Compile Include="ErrorHandling.fs" />
+    <Compile Include="FoodChain.fs" />
     <Compile Include="Gigasecond.fs" />
     <Compile Include="GradeSchool.fs" />
     <Compile Include="Grains.fs" />
