--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -63,6 +63,7 @@
     <Compile Include="BinarySearch.fs" />
     <Compile Include="BinarySearchTree.fs" />
     <Compile Include="Bob.fs" />
+    <Compile Include="Bowling.fs" />
     <Compile Include="BracketPush.fs" />
     <Compile Include="CircularBuffer.fs" />
     <Compile Include="Clock.fs" />
