--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -66,6 +66,7 @@
     <Compile Include="BobTest.fs" />
     <Compile Include="BowlingTest.fs" />
     <Compile Include="BracketPushTest.fs" />
+    <Compile Include="ChangeTest.fs" />
     <Compile Include="CircularBufferTest.fs" />
     <Compile Include="ClockTests.fs" />
     <Compile Include="CryptoSquareTest.fs" />
