--- a/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
+++ b/ExercismFSharp/ExercismFSharp/ExercismFSharp.fsproj
@@ -134,6 +134,7 @@
     <Compile Include="Sublist.fs" />
     <Compile Include="SumOfMultiples.fs" />
     <Compile Include="Tournament.fs" />
+    <Compile Include="Transpose.fs" />
     <Compile Include="TreeBuilding.fs" />
     <Compile Include="Triangle.fs" />
     <Compile Include="TwelveDaysSong.fs" />
