--- a/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
+++ b/ExercismFSharp/ExercismFSharp.Tests/ExercismFSharp.Tests.fsproj
@@ -107,6 +107,7 @@
     <Compile Include="PerfectNumbersTest.fs" />
     <Compile Include="PhoneNumberTest.fs" />
     <Compile Include="PigLatinTest.fs" />
+    <Compile Include="PokerTest.fs" />
     <Compile Include="PrimeFactorsTest.fs" />
     <Compile Include="ProteinTranslationTest.fs" />
     <Compile Include="ProverbTest.fs" />
