--- a/ProjectEuler/ProjectEuler/ProjectEuler.fsproj
+++ b/ProjectEuler/ProjectEuler/ProjectEuler.fsproj
@@ -50,6 +50,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
     <Compile Include="Question19.fs" />
+    <Compile Include="Question25.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <PropertyGroup>
