[ProjectEuler] Add 30 solution

--- a/ProjectEuler/ProjectEuler/ProjectEuler.fsproj
+++ b/ProjectEuler/ProjectEuler/ProjectEuler.fsproj
@@ -49,8 +49,9 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
-    <Compile Include="Question19.fs" />
-    <Compile Include="Question25.fs" />
+    <Compile Include="Problem19.fs" />
+    <Compile Include="Problem25.fs" />
+    <Compile Include="Problem30.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <PropertyGroup>
