[ProjectEuler] Add 36 solution

--- a/ProjectEuler/ProjectEuler/ProjectEuler.fsproj
+++ b/ProjectEuler/ProjectEuler/ProjectEuler.fsproj
@@ -53,6 +53,7 @@
     <Compile Include="Problem25.fs" />
     <Compile Include="Problem30.fs" />
     <Compile Include="Problem31.fs" />
+    <Compile Include="Problem36.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <PropertyGroup>
