[ProjectEuler] Add 42 solution

--- a/ProjectEuler/ProjectEuler/ProjectEuler.fsproj
+++ b/ProjectEuler/ProjectEuler/ProjectEuler.fsproj
@@ -54,6 +54,7 @@
     <Compile Include="Problem30.fs" />
     <Compile Include="Problem31.fs" />
     <Compile Include="Problem36.fs" />
+    <Compile Include="Problem42.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <PropertyGroup>
