[GameOfLife] Add Live/Dead cells with LivesInNextiteration functionality

--- a/GameOfLife/GameOfLife/GameOfLife.csproj
+++ b/GameOfLife/GameOfLife/GameOfLife.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cell.cs" />
+    <Compile Include="DeadCell.cs" />
+    <Compile Include="LiveCell.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
