--- a/GameOfLife/GameOfLifeTests/GameOfLifeTests.csproj
+++ b/GameOfLife/GameOfLifeTests/GameOfLifeTests.csproj
@@ -50,7 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="CellTests.cs" />
+    <Compile Include="PositionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
