[GameOfLife] Refactor tests to use CreateWorld for world initialization

--- a/GameOfLife/GameOfLifeTests/GameOfLifeTests.csproj
+++ b/GameOfLife/GameOfLifeTests/GameOfLifeTests.csproj
@@ -45,7 +45,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -53,6 +55,11 @@
     <Compile Include="CellTests.cs" />
     <Compile Include="PositionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CellEqualityTests.cs" />
+    <Compile Include="TestUtils.cs" />
+    <Compile Include="WorldNextIterationTests.cs" />
+    <Compile Include="WorldStateTests.cs" />
+    <Compile Include="WorldEqualityTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GameOfLife\GameOfLife.csproj">
