--- a/GameOfLife/GameOfLifeTests/GameOfLifeTests.csproj
+++ b/GameOfLife/GameOfLifeTests/GameOfLifeTests.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CellEqualityTests.cs" />
     <Compile Include="TestUtils.cs" />
+    <Compile Include="StillLifeTests.cs" />
+    <Compile Include="OscillatorsTests.cs" />
     <Compile Include="WorldNextIterationTests.cs" />
     <Compile Include="WorldStateTests.cs" />
     <Compile Include="WorldEqualityTests.cs" />
