[AdventOfCode] Add Day12 solution

--- a/AdventOfCode/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Day07.cs" />
     <Compile Include="Day08.cs" />
     <Compile Include="Day09.cs" />
+    <Compile Include="Day12.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
