--- a/AdventOfCode/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Day09.cs" />
     <Compile Include="Day10.cs" />
     <Compile Include="Day12.cs" />
+    <Compile Include="Day13.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
