--- a/AdventOfCode/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Day12.cs" />
     <Compile Include="Day13.cs" />
     <Compile Include="Day14.cs" />
+    <Compile Include="Day15.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
