--- a/AdventOfCode/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Day15.cs" />
     <Compile Include="Day16.cs" />
     <Compile Include="Day17.cs" />
+    <Compile Include="Day18.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
