[AdventOfCode] Add Day19 Part I solution

--- a/AdventOfCode/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Day16.cs" />
     <Compile Include="Day17.cs" />
     <Compile Include="Day18.cs" />
+    <Compile Include="Day19.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
