--- a/AdventOfCode/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Day21.cs" />
     <Compile Include="Day22.cs" />
     <Compile Include="Day23.cs" />
+    <Compile Include="Day24.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
