[ProjectEuler] Add 12 solution

--- a/ProjectEuler/ProjectEuler/ProjectEuler.fsproj
+++ b/ProjectEuler/ProjectEuler/ProjectEuler.fsproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
+    <Compile Include="Problem12.fs" />
     <Compile Include="Problem19.fs" />
     <Compile Include="Problem25.fs" />
     <Compile Include="Problem30.fs" />
