[ExercismCSharp] Include book-store in csproj files

--- a/ExercismCSharp/Code/Code.csproj
+++ b/ExercismCSharp/Code/Code.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BookStore.cs" />
     <Compile Include="ErrorHandling.cs" />
     <Compile Include="Luhn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
