--- a/ExercismCSharp/Test/Test.csproj
+++ b/ExercismCSharp/Test/Test.csproj
@@ -59,6 +59,7 @@
     <Compile Include="LuhnTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ErrorHandlingTest.cs" />
+    <Compile Include="BookStoreTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Code\Code.csproj">
