--- a/DotNetForNinjas/DotNetForNinjas/DotNetForNinjas.csproj
+++ b/DotNetForNinjas/DotNetForNinjas/DotNetForNinjas.csproj
@@ -43,11 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ReferenceAndValueTypes.cs" />
+    <Compile Include="Keywords\OutKeyword.cs" />
+    <Compile Include="Reference and Value\ReferenceAndValueTypes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReferenceTypes.cs" />
-    <Compile Include="ValueTypes.cs" />
+    <Compile Include="Reference and Value\ReferenceTypes.cs" />
+    <Compile Include="Reference and Value\ValueTypes.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
