--- a/DotNetForNinjas/DotNetForNinjas/DotNetForNinjas.csproj
+++ b/DotNetForNinjas/DotNetForNinjas/DotNetForNinjas.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Keywords\OutKeyword.cs" />
+    <Compile Include="Keywords\RefKeyword.cs" />
     <Compile Include="Reference and Value\ReferenceAndValueTypes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
