--- a/DotNetForNinjas/DotNetForNinjas/DotNetForNinjas.csproj
+++ b/DotNetForNinjas/DotNetForNinjas/DotNetForNinjas.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reference and Value\ReferenceTypes.cs" />
     <Compile Include="Reference and Value\ValueTypes.cs" />
+    <Compile Include="Operators\TernaryOperator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
