--- a/ReserveGymClasses/ReserveGymClasses/ReserveGymClasses.csproj
+++ b/ReserveGymClasses/ReserveGymClasses/ReserveGymClasses.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DriverExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebElementExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
