--- a/ReserveGymClasses/ReserveGymClasses/ReserveGymClasses.csproj
+++ b/ReserveGymClasses/ReserveGymClasses/ReserveGymClasses.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DriverExtensions.cs" />
+    <Compile Include="Email.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebElementExtensions.cs" />
