--- a/ReserveGymClasses/ReserveGymClasses/ReserveGymClasses.csproj
+++ b/ReserveGymClasses/ReserveGymClasses/ReserveGymClasses.csproj
@@ -52,12 +52,17 @@
   <ItemGroup>
     <Compile Include="DriverExtensions.cs" />
     <Compile Include="Email.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="Pages\BasePage.cs" />
+    <Compile Include="Pages\MyBookingsPage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebElementExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
