--- a/ReserveGymClasses/ReserveGymClasses/ReserveGymClasses.csproj
+++ b/ReserveGymClasses/ReserveGymClasses/ReserveGymClasses.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Pages\MyBookingsPage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScreenshotManager.cs" />
     <Compile Include="WebElementExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
