--- a/MicrosoftTraining/Module 02 - Models/MyShuttle/MyShuttle/MyShuttle.Web.csproj
+++ b/MicrosoftTraining/Module 02 - Models/MyShuttle/MyShuttle/MyShuttle.Web.csproj
@@ -116,15 +116,96 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\animate.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\carriers.css" />
+    <Content Include="Content\footer.css" />
+    <Content Include="Content\form.css" />
+    <Content Include="Content\home.css" />
+    <Content Include="Content\Images\address.png" />
+    <Content Include="Content\Images\arrowdown.png" />
+    <Content Include="Content\Images\bgcolaborators.png" />
+    <Content Include="Content\Images\bullet.png" />
+    <Content Include="Content\Images\clock.png" />
+    <Content Include="Content\Images\downloadAndroid.png" />
+    <Content Include="Content\Images\downloadAppstore.png" />
+    <Content Include="Content\Images\downloadbg.png" />
+    <Content Include="Content\Images\downloadW8.png" />
+    <Content Include="Content\Images\downloadWP.png" />
+    <Content Include="Content\Images\email.png" />
+    <Content Include="Content\Images\fly.png" />
+    <Content Include="Content\Images\inf-device.png" />
+    <Content Include="Content\Images\inf-left-arrow.png" />
+    <Content Include="Content\Images\inf-pin.png" />
+    <Content Include="Content\Images\inf-right-arrow.png" />
+    <Content Include="Content\Images\inf-screen.png" />
+    <Content Include="Content\Images\login.png" />
+    <Content Include="Content\Images\logoheader.png" />
+    <Content Include="Content\Images\logologin.png" />
+    <Content Include="Content\Images\map.png" />
+    <Content Include="Content\Images\mockupW8.png" />
+    <Content Include="Content\Images\phone.png" />
+    <Content Include="Content\Images\pin.png" />
+    <Content Include="Content\Images\pinmap.png" />
+    <Content Include="Content\Images\search.png" />
+    <Content Include="Content\Images\slide1.png" />
+    <Content Include="Content\Images\slide2.png" />
+    <Content Include="Content\Images\slide3.png" />
+    <Content Include="Content\Images\starOFF.png" />
+    <Content Include="Content\Images\starON.png" />
+    <Content Include="Content\Images\up.png" />
+    <Content Include="Content\jquery.raty.css" />
+    <Content Include="Content\login.css" />
+    <Content Include="Content\site.css" />
+    <Content Include="Content\variables.css" />
     <Content Include="packages.config" />
+    <Content Include="Scripts\bind-polyfill.min.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\countUp.min.js" />
+    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\jquery-1.10.2.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\jquery.raty.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\login.validations.js" />
+    <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\ng-img-crop.css" />
+    <Content Include="Scripts\ng-img-crop.js" />
+    <Content Include="Scripts\Pages\CarrierList\index.js" />
+    <Content Include="Scripts\Pages\Config.js" />
+    <Content Include="Scripts\Pages\Home\Common.js" />
+    <Content Include="Scripts\Pages\Home\Index.js" />
+    <Content Include="Scripts\respond.js" />
+    <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\smooth-scroll.min.js" />
+    <Content Include="Scripts\waypoints.min.js" />
+    <Content Include="Scripts\wow.min.js" />
+    <None Include="Scripts\_references.js" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\web.config" />
-    <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
-    <Content Include="Scripts\jquery-3.1.1.min.map" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Index_old.cshtml" />
     <Content Include="Views\CarrierList\Index.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Content\carriers.less" />
+    <Content Include="Content\footer.less" />
+    <Content Include="Content\form.less" />
+    <Content Include="Content\home.less" />
+    <Content Include="Content\login.less" />
+    <Content Include="Content\site.less" />
+    <Content Include="Content\variables.less" />
+    <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\_CarrierListPartial.cshtml" />
+    <Content Include="Views\Shared\_RegisterCarrierForm.cshtml" />
+    <Content Include="Views\Shared\_SearchPartial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -133,34 +214,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap-theme.css" />
-    <Content Include="Content\bootstrap-theme.min.css" />
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Content\bootstrap.min.css.map" />
-    <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Content\bootstrap-theme.min.css.map" />
-    <Content Include="Content\bootstrap-theme.css.map" />
-    <None Include="Scripts\jquery-3.1.1.intellisense.js" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\jquery-3.1.1.js" />
-    <Content Include="Scripts\jquery-3.1.1.min.js" />
-    <Content Include="Scripts\jquery-3.1.1.slim.js" />
-    <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
