--- a/SyncExperiments/SyncExperiments/SyncExperiments.csproj
+++ b/SyncExperiments/SyncExperiments/SyncExperiments.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Experiment.cs" />
+    <Compile Include="ExperimentDetails.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
