--- a/AdventOfCode/2018/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/2018/AdventOfCode/AdventOfCode.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Day01.cs" />
     <Compile Include="Day02.cs" />
+    <Compile Include="Day03.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
