[AdventOfCode] Add Day05 solution

--- a/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
+++ b/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Day02Tests.cs" />
     <Compile Include="Day03Tests.cs" />
     <Compile Include="Day04Tests.cs" />
+    <Compile Include="Day05Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
