--- a/AdventOfCode/2018/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/2018/AdventOfCode/AdventOfCode.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Day03.cs" />
     <Compile Include="Day04.cs" />
     <Compile Include="Day05.cs" />
+    <Compile Include="Day06.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
