--- a/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
+++ b/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Day03Tests.cs" />
     <Compile Include="Day04Tests.cs" />
     <Compile Include="Day05Tests.cs" />
+    <Compile Include="Day06Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
