--- a/AdventOfCode/2018/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/2018/AdventOfCode/AdventOfCode.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Day05.cs" />
     <Compile Include="Day06.cs" />
     <Compile Include="Day08.cs" />
+    <Compile Include="Day09.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
