--- a/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
+++ b/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Day05Tests.cs" />
     <Compile Include="Day06Tests.cs" />
     <Compile Include="Day08Tests.cs" />
+    <Compile Include="Day09Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
